--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kavindasr/hospital.git"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
   }
 }
