--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,22 @@
 {
   "development": {
-    "username": "ksr",
-    "password": "ksr199841",
-    "database": "hospital_db2",
+    "username": "root",
+    "password": "Isuru@123",
+    "database": "hospital",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "ksr",
-    "password": "ksr199841",
-    "database": "hospital_db2",
+    "username": "root",
+    "password": "Isuru@123",
+    "database": "hospital",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "ksr",
-    "password": "ksr199841",
-    "database": "hospital_db2",
+    "username": "root",
+    "password": "Isuru@123",
+    "database": "hospital",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
